--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@aws-sdk/client-dynamodb": "^3.896.0"
+	}
 }
