Added mapstructure and all needed functions for functionality

--- a/package.json
+++ b/package.json
@@ -11,6 +11,14 @@
 	"license": "ISC",
 	"type": "module",
 	"dependencies": {
-		"@aws-sdk/client-dynamodb": "^3.896.0"
+		"@aws-sdk/client-dynamodb": "^3.896.0",
+		"@aws-sdk/util-dynamodb": "^3.899.0",
+		"@middy/core": "^6.4.5",
+		"@middy/http-error-handler": "^6.4.5",
+		"@middy/http-json-body-parser": "^6.4.5",
+		"bcryptjs": "^3.0.2",
+		"http-errors": "^2.0.0",
+		"jsonwebtoken": "^9.0.2",
+		"uuid": "^13.0.0"
 	}
 }
