--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@middy/core": "^6.4.5",
 		"@middy/http-error-handler": "^6.4.5",
 		"@middy/http-json-body-parser": "^6.4.5",
+		"@middy/validator": "^6.4.5",
 		"bcryptjs": "^3.0.2",
 		"http-errors": "^2.0.0",
 		"jsonwebtoken": "^9.0.2",
